--- a/ansible/roles/monitoring/templates/mysqlchk.j2
+++ b/ansible/roles/monitoring/templates/mysqlchk.j2
@@ -2,7 +2,7 @@ service mysqlchk
 {
   flags = REUSE
   socket_type = stream
-  port = {{ monitor_port }}
+  port = 9302
   wait = no
   user = nobody
   {% if monitor_what == "galera" %}
