--- a/ansible/roles/monitoring/templates/replicationcheck.sh.j2
+++ b/ansible/roles/monitoring/templates/replicationcheck.sh.j2
@@ -2,9 +2,9 @@
 
 SECONDS_BEHIND_MASTER=300
 
-MYSQL_HOST="{{ checker_host }}"
-MYSQL_PORT="{{ checker_port }}"
-MYSQL_USERNAME="{{ checker_name }}"
+MYSQL_HOST="localhost"
+MYSQL_PORT="{{ mariadb_port }}"
+MYSQL_USERNAME="haproxyUser"
 MYSQL_PASSWORD="{{ checker_passwd }}"
 
 echo=`which echo`
