--- a/ansible/roles/mariadb/templates/mariadb.conf.j2
+++ b/ansible/roles/mariadb/templates/mariadb.conf.j2
@@ -9,7 +9,7 @@
 user = mysql
 datadir = {{ mariadb_datadir }}
 socket = {{ mariadb_socket }}
-port = {{ mariadb_port }}
+port = {{ mysql_port }}
 bind_address = {{ mariadb_bind_address }}
 skip_name_resolve = 1
 max_allowed_packet = {{ mariadb_max_allowed_packet }}
