--- a/ansible/roles/monitoring/templates/galeracheck.sh.j2
+++ b/ansible/roles/monitoring/templates/galeracheck.sh.j2
@@ -6,7 +6,7 @@ CLUSTER_STATUS="Primary"
 CONNECTED="ON"
 
 MYSQL_HOST="localhost"
-MYSQL_PORT="{{ mariadb_port }}"
+MYSQL_PORT="{{ mysql_port }}"
 MYSQL_USERNAME="haproxyUser"
 MYSQL_PASSWORD="{{ checker_passwd }}"
 
