--- a/ansible/roles/monitoring/templates/replicationcheck.sh.j2
+++ b/ansible/roles/monitoring/templates/replicationcheck.sh.j2
@@ -3,7 +3,7 @@
 SECONDS_BEHIND_MASTER=300
 
 MYSQL_HOST="localhost"
-MYSQL_PORT="{{ mariadb_port }}"
+MYSQL_PORT="{{ mysql_port }}"
 MYSQL_USERNAME="haproxyUser"
 MYSQL_PASSWORD="{{ checker_passwd }}"
 
