--- a/ansible/roles/mariadb/templates/client.cnf.j2
+++ b/ansible/roles/mariadb/templates/client.cnf.j2
@@ -1,7 +1,7 @@
 [client]
 user=root
-password={{ mariadb_root_passwd }}
+password={{ mysql_root_passwd }}
 
 [mysql]
 user=root
-password={{ mariadb_root_passwd }}
+password={{ mysql_root_passwd }}
