--- a/ansible/roles/gitlab/files/setup_gitlab.sh.j2
+++ b/ansible/roles/gitlab/files/setup_gitlab.sh.j2
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+export PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
+
 yum -y install curl policycoreutils openssh-server openssh-clients
 systemctl enable sshd
 systemctl start sshd
