--- a/ansible/roles/sshd/templates/sshd_config.j2
+++ b/ansible/roles/sshd/templates/sshd_config.j2
@@ -120,5 +120,4 @@ AcceptEnv XMODIFIERS
 # override default of no subsystems
 Subsystem       sftp    /usr/libexec/openssh/sftp-server
 
-AllowUsers {{ ansible_ssh_user }}
-AllowGroups {{ admin_group }} {{ dev_group }}
+AllowGroups {{ ansible_group }} {{ admin_group }} {{ dev_group }}
