--- a/ansible/roles/jenkins/files/install_jenkins.sh.j2
+++ b/ansible/roles/jenkins/files/install_jenkins.sh.j2
@@ -3,5 +3,5 @@
 docker pull jenkinsci/jenkins:lts && \
 
 if ! docker ps | grep -q myjenkins; then
-  docker run --name myjenkins -p 8080:8080 -p 50000:50000 -v /var/jenkins_home jenkinsci/jenkins:lts
+  docker run -itd --name myjenkins -p 8080:8080 -p 50000:50000 -v /var/jenkins_home jenkinsci/jenkins:lts
 fi
