--- a/ansible/roles/gitlab-runner/files/setup_gitlab_runner.sh.j2
+++ b/ansible/roles/gitlab-runner/files/setup_gitlab_runner.sh.j2
@@ -3,8 +3,5 @@
 export PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 
 # For RHEL/CentOS
-curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-ci-multi-runner/script.rpm.sh | sudo bash
+curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-ci-multi-runner/script.rpm.sh | sudo bash && \
 yum -y install gitlab-runner
-# Update
-yum -y update
-yum -y install gitlab-ci-multi-runner
