--- a/ansible/roles/nginx/templates/nginx.vhosts.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.vhosts.conf.j2
@@ -1,7 +1,7 @@
 server {
 
 {% for k,v in item.iteritems() %}
-{% if k.find('location') == -1 and k != "name" and k.find("cache") == -1 and k.find("upstream") == -1 and k != "log_dir" %}
+{% if k.find('location') == -1 and k != "name" and k != "log_dir" %}
   {{ k }} {{ v }};
 {% endif %}
 {% endfor %}
@@ -10,13 +10,7 @@ server {
 {% if k.find('location') != -1 %}
   location {{ v.name }} {
 {% for x,y in v.iteritems() if x != 'name' %}
-{% if x == "proxy_set_header" or x == "proxy_cache_valid" %}
-{% for i in y %}
-      {{ x }} {{ i }};
-{% endfor %}
-{% else %}
-      {{ x }} {{ y }};
-{% endif %}
+    {{ x }} {{ y }};
 {% endfor %}
   }
 
