--- a/ansible/roles/gitlab-runner/files/register_shared_runner.sh.j2
+++ b/ansible/roles/gitlab-runner/files/register_shared_runner.sh.j2
@@ -5,7 +5,8 @@ export PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 GITLAB_URL=$1
 REGISTRATION_TOKEN=$2
 RUNNER_DESC=$3
-executor=$4
+TAG_LIST=$4
+executor=$5
 
 # Register runner
 if [ ${executor} == "dood" ]; then
@@ -14,6 +15,7 @@ if [ ${executor} == "dood" ]; then
     --registration-token ${REGISTRATION_TOKEN} \
     --executor docker \
     --description ${RUNNER_DESC} \
+    --tag-list ${TAG_LIST} \
     --docker-image "docker:latest" \
     --docker-volumes /var/run/docker.sock:/var/run/docker.sock
 fi
